--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -137,9 +137,12 @@
         <div class="large-4 medium-4 cell">
           <h5>Try one of these buttons:</h5>
           <p><a href="#" class="button">Simple Button</a><br/>
-            <a href="#" class="success button">Success Btn</a><br/>
-            <a href="#" class="alert button">Alert Btn</a><br/>
-            <a href="#" class="secondary button">Secondary Btn</a></p>
+            <a href="#" class="button accent">Accent Btn</a><br/>
+            <a href="#" class="button primary">Primary Btn</a><br/>
+            <a href="#" class="button secondary">Secondary Btn</a><br/>
+            <a href="#" class="button large">Large Btn</a><br/>
+            <a href="#" class="button">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></a><br/>
+            <a href="#" class="button small">Small Btn</a></p>
           <div class="callout">
             <h5>So many components, girl!</h5>
             <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
