some more component

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -49,3 +49,40 @@
         </figure>
     </div>
 </section>
+<div class="pagewrap">
+    <ul class="cardgrid">
+        <li>
+            <div class="card">
+                <h3 class="card__title">Some card component looks like this</h3>
+                <div class="card__excerpt">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure amet laboriosam necessitatibus perspiciatis quis veniam alias temporibus voluptatum quod! Voluptates ex incidunt ea autem maxime temporibus necessitatibus velit iusto quaerat?</p>
+                </div>
+                <div class="card__actions">
+                    <a href="#" class="button accent">Tovább olvasom</a>
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="card secondary">
+                <h3 class="card__title">Card component's title </h3>
+                <div class="card__excerpt">
+                    <p>Adipisicing elit. Iure amet laboriosam necessitatibus perspiciatis quis veniam alias temporibus voluptatum quod! Voluptates ex incidunt ea autem maxime temporibus necessitatibus velit iusto quaerat?</p>
+                </div>
+                <div class="card__actions">
+                    <a href="#" class="button accent">Bökjön ide barátom</a>
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="card accent">
+                <h3 class="card__title">Kalapban láttuk apát</h3>
+                <div class="card__excerpt">
+                    <p>Adipisicing elit. Iure amet laboriosam necessitatibus perspiciatis quis veniam alias temporibus voluptatum quod! Voluptates ex incidunt ea autem maxime temporibus necessitatibus velit iusto quaerat?</p>
+                </div>
+                <div class="card__actions">
+                    <a href="#" class="button">Megnézem a videót<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
+                </div>
+            </div>
+        </li>
+    </ul>
+</div>
