--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,24 +1,58 @@
 <div class="hero">
     <img class="hero__bg" src="{{root}}assets/img/borito.jpg" alt="Apa mikor jön haza?">
-    <div class="pagewrap narrowwrap hero__content">
+    <div class="hero__content">
         <h2 class="hero__title text-center">Apa mikor jön</h2>
         <h2 class="hero__title text-right"><span>haza?</span></h2>
     </div>
 </div>
+
 <div class="pagewrap">
-    <h3>Try one of these buttons</h3>
-    <p><a href="#" class="button">Simple Button</a><br/>
-    <a href="#" class="button accent">Accent Btn</a><br/>
-    <a href="#" class="button primary">Primary Btn</a><br/>
-    <a href="#" class="button secondary">Secondary Btn</a><br/>
-    <a href="#" class="button large">Large Btn</a><br/>
-    <a href="#" class="button">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></a><br/>
-    <a href="#" class="button small">Small Btn</a></p>
-    <div class="callout">
-        <h3>So many components, girl!</h3>
-        <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-        <a href="https://get.foundation/sites/docs/" class="small button">Go to Foundation Docs</a>
+    <div class="accentcopy">
+    <h1>Távol a család projekt</h1>
+    <p>Kampányunk keretében személyes történeteknek adunk teret. Olyan emberek mesélnek, akiknek valamilyen közeli családtagja  - gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
+    <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
+    <p>Célunk, hogy a hozzátartozók és szabadult fogvatartottak <a href="#">személyes történeteinek erejével megmutassuk,</a> hogy a börtönök valósága nincs is olyan távol tőlünk, mint hinnénk. A minőségi kapcsolattartás jelenti azt a fonalat, ami visszavezet a kinti életbe. A kinti kapcsolatok teszik lehetővé, hogy a börtönt megjárt emberek újra a társadalom tagjai lehessenek. </p>
+    <p><a href="#" class="button">Simple Button</a>
+        <a href="#" class="button accent">Accent Btn</a>
+        <a href="#" class="button primary">Primary Btn</a>
+        <a href="#" class="button secondary">Secondary Btn</a>
+        <a href="#" class="button large">Large Btn</a>
+        <a href="#" class="button">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
+        <a href="#" class="button small">Small Btn</a></p>
     </div>
+</div>
+
+<section class="mpt full">
+    <div class="mpt__content">
+        <h2>Feszített háttérképes szekció emígyen néz ki</h2>
+        <p>
+            Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől. A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket. 
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde cum illum voluptatum sint ab hic quisquam repellendus facilis libero expedita quam, sequi architecto minima repudiandae nobis animi corrupti, debitis odit.</p>
+        <a href="#" class="button">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
+    </div>
+    <div class="mpt__bg">
+            <img src="https://source.unsplash.com/1600x1200/?prison" alt="">
+    </div>
+</section>
+
+<section class="mpt reverse wide ">
+    <div class="mpt__content">
+        <h2>Vagy elől a kép és utána szöveg desktopon, és nem full széles szöveggel</h2>
+        <p>
+            Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől. A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket. 
+        </p>
+        <a href="#" class="button secondary">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
+    </div>
+    <div class="mpt__bg">
+            <img src="https://source.unsplash.com/1600x1280/?prison,arrested" alt="">
+    </div>
+</section>
+
+<div class="pagewrap">
+    <h3>So many components, girl!</h3>
+    <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
+    <a href="https://get.foundation/sites/docs/" class="small button">Go to Foundation Docs</a>
 </div>
 
 <section class="mpt">
@@ -85,4 +119,11 @@
             </div>
         </li>
     </ul>
+</div>
+
+<div class="pagewrap">
+    <div class="accentcopy narrowwrap">
+        <p>A FECSKE a Fogvatartottakat és Családjukat Képviselő Csoport. Szabadult fogvatartottakból, családtagjaikból, civilekből, a büntetés-végrehajtással foglalkozó szakemberekből álló hálózat. Ez a hálózat abban hisz, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni. Az emberséges börtönkörülmények között töltött szabadságvesztés, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a társadalomba történő sikeres visszailleszkedést. Az emberséges fogvatartás kiemelt figyelmet fordít a családdal való minőségi kapcsolattartásra.</p>
+        <p>A FECSKE azért jött létre, hogy a magyar börtön égető, és rendszerszintű problémáin együtt gondolkozhassanak a büntetés-végrehajtás által érintett csoportok tagjai. Hosszútávon egy önszerveződő mozgalom alapjait kívánjuk megteremteni és a fogvatartottak érdekképviseletének új formáit kialakítani. Célunk, hogy változzon a közvéleményben a fogvatartottakról kialakított kép. Legyen olyan platform, amin a fogvatartottak és családjuk nézőpontja is megjelenik.</p>
+    </div>
 </div>
