soundcloud mini player tests

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,6 +20,25 @@
         <a href="#" class="button">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
         <a href="#" class="button small">Small Btn</a></p>
     </div>
+    <br><br>
+    <div class="narrowwrap">
+        <h1>Soundcloudos embed próbák</h1>
+        <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+        <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1134873646&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+        <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+        <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1134873646&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+        <br><br>
+        <h2>vagy keretben</h2>
+        <div style="background-color: #374045; padding:0.75rem 0.5rem .333rem">
+        <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+        </div>
+        <br>
+        <div style="background-color: #F1E9D9; padding:0.75rem 0.5rem .333rem">
+            <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
+        </div>
+    </div>
+    
+    </div>
 </div>
 
 <section class="mpt full">
@@ -35,6 +54,92 @@
             <img src="https://source.unsplash.com/1600x1200/?prison" alt="">
     </div>
 </section>
+
+<div class="pagewrap">
+    <h2 class="sectitle">Content carousel component</h2>
+    <section class="cardswiper">
+        <div>
+            <article class="card">
+                <figure class="card__fig">
+                    <a href="#">
+                        <img src="https://source.unsplash.com/800x600/?prison" alt="">
+                    </a>
+                </figure>
+                <h3 class="card__title">
+                    <a href="#">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing.
+                    </a>
+                </h3>
+                <div class="card__excerpt">
+                    <p>Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
+                </div>
+                <div class="card__actions">
+                    <a href="#" class="button accent">Tovább olvasom</a>
+                </div>
+            </article>
+        </div>
+        <div>
+            <article class="card">
+                <figure class="card__fig">
+                    <a href="#">
+                        <img src="https://source.unsplash.com/800x600/?prison" alt="">
+                    </a>
+                </figure>
+                <h3 class="card__title">
+                    <a href="#">
+                        Ipsum consectetur adipisicing
+                    </a>
+                </h3>
+                <div class="card__excerpt">
+                    <p>Dolor sit amet consectetur, adipisicing elit. Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
+                </div>
+                <div class="card__actions">
+                    <a href="#" class="button secondary">Tovább olvasom</a>
+                </div>
+            </article>
+        </div>
+        <div>
+            <article class="card accent">
+                <figure class="card__fig">
+                    <a href="#">
+                        <img src="https://source.unsplash.com/800x600/?prison" alt="">
+                    </a>
+                </figure>
+                <h3 class="card__title">
+                    <a href="#">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing.
+                    </a>
+                </h3>
+                <div class="card__excerpt">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
+                </div>
+                <div class="card__actions">
+                    <a href="#" class="button">Tovább olvasom</a>
+                </div>
+            </article>
+        </div>
+        <div>
+            <article class="card secondary">
+                <figure class="card__fig">
+                    <a href="#">
+                        <img src="https://source.unsplash.com/800x600/?prison" alt="">
+                    </a>
+                </figure>
+                <h3 class="card__title">
+                    <a href="#">
+                        Sit amet consectetur adipisicing.
+                    </a>
+                </h3>
+                <div class="card__excerpt">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore corporis exercitationem dolore magnam porro nobis ab magni pariatur error at, dolorum odit? Architecto.</p>
+                </div>
+                <div class="card__actions">
+                    <a href="#" class="button accent">Tovább olvasom</a>
+                </div>
+            </article>
+        </div>
+    </section>
+</div>
 
 <section class="mpt reverse wide ">
     <div class="mpt__content">
@@ -118,6 +223,31 @@
                 </div>
             </div>
         </li>
+        <li>
+            <div class="card accent">
+                <h3 class="card__title">Ebben alul egy sounclod dark themed mini player</h3>
+                <div class="card__excerpt">
+                    <p>Adipisicing elit. Iure amet laboriosam necessitatibus perspiciatis quis veniam alias temporibus voluptatum quod! Voluptates ex incidunt ea autem maxime temporibus necessitatibus velit iusto quaerat?</p>
+                </div>
+                <div class="card__actions">
+                    <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1134873646&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+                </div>
+            </div>
+        </li>
+        <li>
+            <div class="card">
+                <h3 class="card__title">Soundcloud light theme</h3>
+                <div class="card__excerpt">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure amet laboriosam necessitatibus perspiciatis quis veniam alias temporibus voluptatum quod! Voluptates ex incidunt ea autem maxime temporibus necessitatibus velit iusto quaerat?</p>
+                </div>
+                <div class="card__actions">
+                    <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1134873646&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
+                </div>
+            </div>
+        </li>
+
+
+
     </ul>
 </div>
 
