--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,7 +64,7 @@
             <img src="https://source.unsplash.com/1600x1280/?prison,arrested" alt="">
     </div>
 </section>
-<div class="pagewrap secondary">
+<div class="pagewrap megabg">
     <h4>Élet a rácsok mögött</h2>
     <br>
     <div class="narrowwrap">
