--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,8 +25,8 @@
         <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
         <p>
-            <button data-open="video-one-modal" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
-            <a href="#" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            <button data-youtubemodal="paL7QSf9kc4" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
+            <a href="{{root}}/story.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
         </p>
     </div>
     <div class="mpt__bg">
@@ -41,8 +41,8 @@
         <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
         <p>
-            <button data-open="video-one-modal" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
-            <a href="#" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            <button data-youtubemodal="pxs6wcX889o" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
+            <a href="{{root}}/story.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
         </p>
     </div>
     <div class="mpt__bg">
@@ -58,24 +58,12 @@
         <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket. 
         </p>
-        <button data-open="video-one-modal" class="button secondary">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+        <button data-youtubemodal="eaXAEowxOQg" class="button secondary">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
     </div>
     <div class="mpt__bg">
         <img src="{{root}}/assets/img/content/0111_II.jpg" alt="">
     </div>
 </section>
-
-<div class="lettermodal" id="video-one-modal" data-reveal data-animation-in="fade-in fast" data-animation-out="fade-out fast">
-    <div class="lettermodal__inner">
-        <div class="responsive-embed widescreen">
-            <div id="themodalplayer"></div>
-        </div>
-    </div>
-    <button class="lettermodal__close" data-close aria-label="Felugró bezárása" type="button">
-        <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
-    </button>
-</div>
-
 <div class="pagewrap megabg">
     <h4>Élet a rácsok mögött</h4>
     <br>
