--- a/src/pages/story.html
+++ b/src/pages/story.html
@@ -1,14 +1,73 @@
-<section class="mpt wide">
+<section class="mpt wide reverse" data-magellan>
     <div class="mpt__content">
-        <h2>Ismerd meg Luca történetét</h2>
+        <h2>Ismerd meg Erika történetét</h2>
         <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
         <p>
-            <button adata-open="video-one-modal" data-youtubemodal="pxs6wcX889o" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
-            <a href="#" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            <a href="#videosection" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>&nbsp;
+            <a href="#" class="button accent">Megosztom a másokkal<svg class="icon"><use xlink:href="#icon-share"></use></svg></a>
         </p>
     </div>
     <div class="mpt__bg">
-        <img src="{{root}}/assets/img/content/0111_I.jpg" alt="">
+        <img src="{{root}}/assets/img/content/0111_II.jpg" alt="">
     </div>
 </section>
+<hr class="fulldivider" style="margin:0">
+<div class="pagewrap nobottom">
+    <div class="anarrowwrap">
+        <h2 class="sectitle">Erika története</h2>
+        <div class="twocolcopy">
+            <p>Etiam porta sem malesuada magna mollis euismod. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Nullam id dolor id nibh ultricies vehicula ut id elit. Cras mattis consectetur purus sit amet fermentum.</p>
+            <p>Nulla vitae elit libero, a pharetra augue. Maecenas faucibus mollis interdum. Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+            <blockquote>
+                „Édesapámat kétszer láttam sírni életemben - egyszer öcsém temetésén, aki autóbalesetben elhunyt, másodszor pedig akkor, amikor mentünk az autópályán a börtönbe.”  
+                <cite>Erika, FECSKE interjú</cite>
+            </blockquote>
+            <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo. Sed posuere consectetur est at lobortis. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+        </div>
+
+    </div>
+
+</div>
+
+<div id="videosection" class="pagewrap acoverbg" data-magellan-target="videosection">
+    <div class="narrowwrap">
+    <div class="responsive-embed widescreen">
+        <iframe src="https://www.youtube.com/embed/pxs6wcX889o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    </div>
+
+</div>
+<hr class="fulldivider">
+<div class="pagewrap">
+
+    <div class="narrowwrap">
+        <h4 class="asectitle atext-center">Ismerd meg a többiek történetét is!</h4>
+        <br>
+
+    <ul class="tcardgrid">
+        <li>
+            <div class="tcard">
+                <h3 class="tcard__title"><a href="{{roots}}/story.html">Andrea története</a></h3>
+            </div>
+        </li>
+        <li>
+            <div class="tcard secondary">
+                <h3 class="tcard__title"><a href="{{roots}}/story.html">Andor története</a></h3>
+            </div>
+        </li>
+        <li>
+            <div class="tcard accent">
+                <h3 class="tcard__title"><a href="{{roots}}/story.html">Amanda és András története</a></h3>
+            </div>
+        </li>
+        <li>
+            <div class="tcard opaque">
+                <h3 class="tcard__title"><a href="{{roots}}/story.html">Andor története</a></h3>
+            </div>
+        </li>
+    </ul>
+    </div>
+</div>
+<br><br>
