--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -176,7 +176,6 @@
         <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
     </button>
 </div>
-
 <section class="mpt awide">
     <div class="mpt__content ">
         <h2>FECSKE - Fogvatartottakat és Családjukat Képviselő Csoport.</h2>
@@ -193,5 +192,5 @@
 
 
 
-<div class="pagewrap">
-</div>
+<!-- <div class="pagewrap">
+</div> -->
