--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,63 +6,71 @@
     </div>
 </div>
 
-<div class="pagewrap" data-magellan>
+<div id="project" data-magellan-target="project" class="pagewrap nobottom">
     <div class="narrowwrap accentcopy">
         <h1 class="sectitle">Távol a család projekt</h1>
         <p>Kampányunk keretében személyes történeteknek adunk teret. Olyan emberek mesélnek, akiknek valamilyen közeli családtagja  - gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
     </div>
 </div>
-<div class="pagewrap notop">
-    <div class="narrowwrap accentcopy">
-        <h1 class="sectitle">Személyes történetek</h1>
-        <p>Célunk, hogy a hozzátartozók és szabadult fogvatartottak <a href="#stories">személyes történeteinek erejével megmutassuk,</a> hogy a börtönök valósága nincs is olyan távol tőlünk, mint hinnénk. A minőségi kapcsolattartás jelenti azt a fonalat, ami visszavezet a kinti életbe. A kinti kapcsolatok teszik lehetővé, hogy a börtönt megjárt emberek újra a társadalom tagjai lehessenek. </p>
+<div id="stories" data-magellan-target="stories">
+    <div class="pagewrap">
+        <div class="narrowwrap accentcopy">
+            <h1 class="sectitle">Személyes történetek</h1>
+            <p>Célunk, hogy a hozzátartozók és szabadult fogvatartottak személyes történeteinek erejével megmutassuk, hogy a börtönök valósága nincs is olyan távol tőlünk, mint hinnénk. A minőségi kapcsolattartás jelenti azt a fonalat, ami visszavezet a kinti életbe. A kinti kapcsolatok teszik lehetővé, hogy a börtönt megjárt emberek újra a társadalom tagjai lehessenek. </p>
+        </div>
     </div>
-</div>
-<section class="mpt wide reverse">
-    <div class="mpt__content">
-        <h2>Ő itt andrea</h2>
-        <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
-        <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
-        <p>
-            <button data-youtubemodal="paL7QSf9kc4" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
-            <a href="{{root}}/story.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
-        </p>
-    </div>
-    <div class="mpt__bg">
+    <section class="mpt wide reverse">
+        <div class="mpt__content">
+            <h2>Ő itt andrea</h2>
+            <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
+            <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
+            <p>
+                <button data-youtubemodal="paL7QSf9kc4" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
+                <a href="{{root}}/story.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            </p>
+        </div>
+        <div class="mpt__bg">
+            <!-- <button class="mpt__bg__play" data-youtubemodal="paL7QSf9kc4"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button> -->
             <img src="{{root}}/assets/img/content/0112_I.jpg" alt="">
-    </div>
-</section>
+        </div>
+    </section>
 
-<section class="mpt wide">
-    <div class="mpt__content">
-        <h2>Ismerd meg Luca történetét</h2>
-        <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
-        <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
-        <p>
-            <button data-youtubemodal="pxs6wcX889o" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
-            <a href="{{root}}/story.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
-        </p>
-    </div>
-    <div class="mpt__bg">
-        <img src="{{root}}/assets/img/content/0111_I.jpg" alt="">
-    </div>
-</section>
+    <section class="mpt wide">
+        <div class="mpt__content">
+            <h2>Ismerd meg Luca történetét</h2>
+            <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
+            <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
+            <p>
+                <button data-youtubemodal="pxs6wcX889o" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>&nbsp;
+                <a href="{{root}}/story2.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            </p>
+        </div>
+        <div class="mpt__bg">
+            <!-- <button class="mpt__bg__play" data-youtubemodal="pxs6wcX889o"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button> -->
+            <img src="{{root}}/assets/img/content/0111_I.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="mpt reverse wide ">
+        <div class="mpt__content">
+            <h2>Új szereplő akinek máshogy vannak a gombjai</h2>
+            <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
+            <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket. 
+            </p>
+            <a href="{{root}}/story.html" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>&nbsp;
+            <button class="button accent">Megosztom másokkal<svg class="icon"><use xlink:href="#icon-share"></use></svg></button>
+        </div>
+        <div class="mpt__bg">
+            <button class="mpt__bg__play" data-youtubemodal="eaXAEowxOQg"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <img src="{{root}}/assets/img/content/0111_II.jpg" alt="">
+        </div>
+    </section>
+</div>
 
 
 
-<section class="mpt reverse wide ">
-    <div class="mpt__content">
-        <h2>Új szereplő története következik itt</h2>
-        <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
-        <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket. 
-        </p>
-        <button data-youtubemodal="eaXAEowxOQg" class="button secondary">Simple Iconized Button<svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-    </div>
-    <div class="mpt__bg">
-        <img src="{{root}}/assets/img/content/0111_II.jpg" alt="">
-    </div>
-</section>
+
 <div class="pagewrap megabg">
     <h4>Élet a rácsok mögött</h4>
     <br>
@@ -85,7 +93,7 @@
                     volt évek múltán újra szabaddá válni, 
                     szabadon élni.
                     </p>
-                    <p><a href="#" target="_blank" class="button tiny accent">Meghalgatom a vágatlan verziót<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
+                    <p><a href="#" target="_blank" class="button tiny faux">Meghalgatom a vágatlan verziót<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
             </div>
           </div>
             <hr class="fulldivider">
@@ -93,12 +101,8 @@
                 <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
             </div>
             <!-- <div style="background-color: #F1E9D9; padding:0.75rem 0.5rem .333rem">
-                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=true&auto_play=false&show_user=false"></iframe>
+                <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/813240166&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
             </div> -->
-
-        
-
-
     </div>
 </div>
 <div class="pagewrap">
@@ -176,7 +180,7 @@
         <span aria-hidden="true"><svg class="icon"><use xlink:href="#icon-close"></use></svg></span>
     </button>
 </div>
-<section class="mpt awide">
+<section id="aboutus" class="mpt awide" data-magellan-target="aboutus">
     <div class="mpt__content ">
         <h2>FECSKE - Fogvatartottakat és Családjukat Képviselő Csoport.</h2>
         <p>Szabadult fogvatartottakból, családtagjaikból, civilekből, a büntetés-végrehajtással foglalkozó szakemberekből álló hálózat. Ez a hálózat abban hisz, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni. Az emberséges börtönkörülmények között töltött szabadságvesztés, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a társadalomba történő sikeres visszailleszkedést. Az emberséges fogvatartás kiemelt figyelmet fordít a családdal való minőségi kapcsolattartásra.</p>
