--- a/src/pages/story2.html
+++ b/src/pages/story2.html
@@ -1,7 +1,7 @@
-<section class="mpt wide reverse" data-magellan>
+<section class="mpt wide" data-magellan>
     <div class="mpt__content">
         <br><br>
-        <h2>Ismerd meg Erika történetét</h2>
+        <h2>Ismerd meg Ágnes történetét</h2>
         <p>Gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
         <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
         <p>
@@ -10,12 +10,12 @@
         </p>
     </div>
     <div class="mpt__bg">
-        <img src="{{root}}/assets/img/content/0111_II.jpg" alt="">
+        <img src="{{root}}/assets/img/content/0112_I.jpg" alt="">
     </div>
 </section>
 <div class="pagewrap nobottom">
     <div class="anarrowwrap">
-        <h2 class="sectitle">Erika története</h2>
+        <h2 class="sectitle">Ágnes története</h2>
         <div class="twocolcopy">
             <p>Etiam porta sem malesuada magna mollis euismod. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Nullam id dolor id nibh ultricies vehicula ut id elit. Cras mattis consectetur purus sit amet fermentum.</p>
             <p>Nulla vitae elit libero, a pharetra augue. Maecenas faucibus mollis interdum. Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
@@ -45,7 +45,6 @@
     <div class="narrowwrap">
         <h4 class="asectitle atext-center">Ismerd meg a többiek történetét is!</h4>
         <br>
-
         <ul class="tcardgrid">
             <li>
                 <div class="tcard">
